--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 			</div>
 		</section>
 		<section class="figures">
-			<div class="figure1"><img src="/img/bg1.png" alt=""></div>
-			<div class="figure2"><img src="/img/bg2.png" alt=""></div>
+			<div class="figure1"><img src="img/bg1.png" alt=""></div>
+			<div class="figure2"><img src="img/bg2.png" alt=""></div>
 		</section>
 	</div>
 	<footer class="footer">
