--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 <body>
 	<div class="container">
 		<header class="header">
-
 			<div class="header__iner">
 				<div class="header__iner-title">
-					<a href="">Сайт учителя русского языка и литературы</a>
+					<a href="index.html">Сайт учителя русского языка и литературы</a>
 				</div>
 				<div class="header__iner-subtitle">
 					Шатовой Анастасии Владиславовны
@@ -29,24 +28,18 @@
 			</div>
 			<div class="header__iner-menu">
 				<ul class="header__iner-navbar">
+					<li class="header__iner-item"><a href="literature.html">Литература</a>
+					</li>
 					<li class="header__iner-item"><a href="">Русский язык</a>
 						<ul class="dropdown">
-							<li><a href="#">К уроку</a></li>
-							<li><a href="#">ЕГЭ</a></li>
-							<li><a href="#">ОГЭ</a></li>
-							<li><a href="#">ВПР</a></li>
+							<li><a href="russLession.html">К уроку</a></li>
+							<li><a href="russEge.html">ЕГЭ</a></li>
+							<li><a href="russOge.html">ОГЭ</a></li>
+							<li><a href="russVpr.html">ВПР</a></li>
 						</ul>
 					</li>
-					<li class="header__iner-item"><a href="">Литература</a>
-						<ul class="dropdown">
-							<li><a href="#">К уроку</a></li>
-							<li><a href="#">ЕГЭ</a></li>
-							<li><a href="#">ОГЭ</a></li>
-							<li><a href="#">ВПР</a></li>
-						</ul>
-					</li>
-					<li class="header__iner-item"><a href="">Методическая копилка</a></li>
-					<li class="header__iner-item"><a href="">В помощь ученику</a></li>
+
+					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
 					<li class="header__iner-item"><a href="">Обратная связь</a></li>
 				</ul>
 			</div>
@@ -106,7 +99,7 @@
 						истории русской и зарубежной литературы, истории русского языка,
 						риторике, истории мировых религий, литературе народов России, основам
 						специальной педагогики и психологии.</h2>
-					<h2 class="main__iner-text"> <a href="">В помощь ученику</a> - эта страница будет полезна не только для
+					<h2 class="main__iner-text"> <a href="">В помощь учителю</a> - эта страница будет полезна не только для
 						учителя, но
 						и для ученика. Здесь Вы найдете планы различных творческих работ,
 						материалы для зачетов, контрольных работ, рекомендации для выполнения
@@ -129,8 +122,8 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-	<script src="/js/slick.min.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
