--- a/literature.html
+++ b/literature.html
@@ -49,131 +49,131 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="forLession/9кл_итоговыйурокГрибоедов.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Итоговый урок. Грибоедов.</p>
 					</a>
 					<a href="forLession/test_voyna_i_mir.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Тест <br> "Война и мир"</p>
 					</a>
 					<a href="forLession/Блок_9 класс.ppt">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Блок. <br> Девятый класс.</p>
 					</a>
 					<a href="forLession/Борис Годунов.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Борис Годунов"</p>
 					</a>
 					<a href="forLession/входная контрольная работа 10 класс.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Входная контрольная работа 10 класс.</p>
 					</a>
 					<a href="forLession/горе от ума.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Горе от ума"</p>
 					</a>
 					<a href="forLession/Горький на дне урок1.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Горький "На дне"</p>
 					</a>
 					<a href="forLession/гранатовый браслет.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Гранатовый браслет"</p>
 					</a>
 					<a href="forLession/Демон_8.11.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>М.Ю.Лермонтов "Демон"</p>
 					</a>
 					<a href="forLession/Жуковский баллада Светлана.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Жуковский. Баллада "Светлана"</p>
 					</a>
 					<a href="forLession/Жуковский.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Жуковский</p>
 					</a>
 					<a href="forLession/Иллюстрации Питера.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Иллюстрации Питера</p>
 					</a>
 					<a href="forLession/карточки_анализ_10кл.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Карточки. Анализ десятчй класс</p>
 					</a>
 					<a href="forLession/контрольная работа 10 класс.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Контрольная работа. Десятый класс</p>
 					</a>
 					<a href="forLession/Контрольная работа 5 класс.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Контрольная работа. Пятый класс</p>
 					</a>
 					<a href="forLession/контрольная работа 7 класс.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Контрольная работа. Седьмой класс</p>
 					</a>
 					<a href="forLession/куст сирени конспект.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Куст сирени" Конеспект</p>
 					</a>
 					<a href="forLession/люблирикаТютчев.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Ф.И. Тютчев. Любовная лирика</p>
 					</a>
 					<a href="forLession/отцы и дети ДРУЖБА И ЛЮБОВЬ.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Дружба и любовь</p>
 					</a>
 					<a href="forLession/отцы и дети конспект урока.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Конспект урока</p>
 					</a>
 					<a href="forLession/Отцы и дети КОНФЛИКТ.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Конфликт</p>
 					</a>
 					<a href="forLession/Отцы и дети КРИТИКА.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Критика</p>
 					</a>
 					<a href="forLession/отцы и дети НИГИЛИЗМ.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Нигилизм</p>
 					</a>
 					<a href="forLession/Отцы и дети практика.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Практика</p>
 					</a>
 					<a href="forLession/отцы и дети ФИНАЛ.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Отцы и дети". Финал</p>
 					</a>
 					<a href="forLession/ПовестиБелкина.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Повести Белкина"</p>
 					</a>
 					<a href="forLession/повестьвременныхлет_7 класс.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>"Повести временных лет". Седьмой класс</p>
 					</a>
 					<a href="forLession/Пушкин_контра.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>А.С. Пушкин. Контрольная работа</p>
 					</a>
 					<a href="forLession/Пушкин практика.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>А.С. Пушкин. Практическая работа</p>
 					</a>
 					<a href="forLession/фет любовная лирика.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>А.А. Фет. Любовная лирика</p>
 					</a>
 				</div>
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
