--- a/manual.html
+++ b/manual.html
@@ -49,15 +49,15 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p></p>
 					</a>
 				</div>
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
