--- a/russEge.html
+++ b/russEge.html
@@ -50,51 +50,51 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="EGE/1 задание ЕГЭ практика.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>1 Задание ЕГЭ. Практика</p>
 					</a>
 					<a href="EGE/1 задание ЕГЭ презентация.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>1 Задание ЕГЭ. Презентация</p>
 					</a>
 					<a href="EGE/3 задание. Теория.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>3 Задание ЕГЭ. Теория</p>
 					</a>
 					<a href="EGE/6 задание. Теория.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>6 Задание ЕГЭ. Теория</p>
 					</a>
 					<a href="EGE/7 задание. Окончания существительных.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>7 Задание ЕГЭ. Окончания существительных</p>
 					</a>
 					<a href="EGE/7 задание. Числительные.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>7 Задание ЕГЭ. Числительные</p>
 					</a>
 					<a href="EGE/8 задание. Грамматические ошибки.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>8 Задание ЕГЭ. Грамматические ошибки</p>
 					</a>
 					<a href="EGE/9 задание. Теория.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>9 Задание ЕГЭ</p>
 					</a>
 					<a href="EGE/10 задание. Карточки.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>10 Задание ЕГЭ. Карточки</p>
 					</a>
 					<a href="EGE/10 задание. Практикум.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>10 Заданиее ЕГЭ. Практикум</p>
 					</a>
 				</div>
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
