--- a/russOge.html
+++ b/russOge.html
@@ -50,63 +50,63 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="OGE/2 задание. практикум ОГЭ.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>2 Задание. Практикум ОГЭ</p>
 					</a>
 					<a href="OGE/5 задание. Правописание приставок. Практикум.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>5 Задание. Приставки. Практикум.</p>
 					</a>
 					<a href="OGE/5 задание. Приставки.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>5 Задание. Приставки</p>
 					</a>
 					<a href="OGE/9.3 огэ.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>9.3 ОГЭ</p>
 					</a>
 					<a href="OGE/задание 4. Практикум.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>4 Задание. Практикум</p>
 					</a>
 					<a href="OGE/огэ_устная часть.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ОГЭ - устная часть</p>
 					</a>
 					<a href="OGE/памятка 9.3.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>9.3 Памятка</p>
 					</a>
 					<a href="OGE/практикум ОГЭ.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Практикум ОГЭ</p>
 					</a>
 					<a href="OGE/практикум пунктуация ОГЭ.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Практикум. Пунктуация ОГЭ</p>
 					</a>
 					<a href="OGE/разбор сочинения ШАБЛОН.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Разбор сочинения. Шаблон</p>
 					</a>
 					<a href="OGE/теория 2 задание.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>2 Задание. Теория</p>
 					</a>
 					<a href="OGE/теория 3 задание.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>3 Задание. Теория</p>
 					</a>
 					<a href="OGE/теория 4 задание.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>4 Задание. Теория</p>
 					</a>
 					<a href="OGE/теория 5 задание.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>5 Задание. Теория</p>
 					</a>
 					<a href="OGE/шаблон сочинения 9.3.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>9.3 Шаблон сочинения</p>
 					</a>
 
@@ -114,8 +114,8 @@
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
