--- a/russVpr.html
+++ b/russVpr.html
@@ -49,51 +49,51 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="VPR/ВПР 1 часть.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ВПР 1 часть</p>
 					</a>
 					<a href="VPR/впр 1-2 задания.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ВПР 1-2 Задания</p>
 					</a>
 					<a href="VPR/ВПР 7 класс 2 часть.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ВПР 7 класс 2 часть</p>
 					</a>
 					<a href="VPR/ВПР 7 класс практикум.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ВПР 7 класс практикум</p>
 					</a>
 					<a href="VPR/впр вторая часть.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>ВПР вторая часть</p>
 					</a>
 					<a href="VPR/задания_ВПР_отработка.pptx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Задания ВПР отработка</p>
 					</a>
 					<a href="VPR/карточки орфоэпия.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Карточки орфоэпия</p>
 					</a>
 					<a href="VPR/Памятка ВПР.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Памятка ВПР</p>
 					</a>
 					<a href="VPR/теория 6 класс ВПР.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Теория 6 класс ВПР</p>
 					</a>
 					<a href="VPR/теория ВПР 7 класс.doc">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Теория 7 класс ВПР</p>
 					</a>
 				</div>
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
