--- a/helpTeacher.html
+++ b/helpTeacher.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/css/slick.css">
-	<link rel="stylesheet" href="/css/slick-theme.css">
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/slick-theme.css">
 
 	<title>Сайт учителя</title>
 </head>
@@ -39,7 +39,7 @@
 						</ul>
 					</li>
 
-					
+
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
 					<li class="header__iner-item"><a href="">Обратная связь</a></li>
 				</ul>
@@ -51,33 +51,33 @@
 				<div class="main__teacher-items">
 					<a
 						href="helpTeacher/Pishem_bez_oshibok_Vse_pravila_russkogo_yazyka_100_gramotnost_za_20_minut_v_den.pdf">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Пишем без ошибок</p>
 					</a>
 					<a href="helpTeacher/STRUKTURA_KAZhDOGO_TIPA_UROKA_PO_FGOS.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Структура каждого типа урока по ФГОС</p>
 					</a>
 					<a href="helpTeacher/Zapominalochki_po_russkomu_yazyku.pdf">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Запоминашки по
 							русскому языку</p>
 					</a>
 					<a href="helpTeacher/Tipy_urokov_po_FGOS_tekhnologicheskie_karty.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Типы
 							уроков по ФГОС, технологические карты</p>
 					</a>
 					<a href="helpTeacher/квест разработка.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Квест разработка</p>
 					</a>
 					<a href="helpTeacher/мероприятия.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Мероприятия</p>
 					</a>
 					<a href="helpTeacher/методики_слабоусп_5г.docx">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>Методики.
 							Слабоучспевающие ученики</p>
 					</a>
@@ -102,8 +102,8 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-	<script src="/js/slick.min.js"></script>
-	<script src="/js/script.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
