--- a/russLession.html
+++ b/russLession.html
@@ -50,31 +50,31 @@
 			<div class="main__iner">
 				<div class="main__teacher-items">
 					<a href="lession/5 класс/">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>5 класс</p>
 					</a>
 					<a href="lession/6 класс/">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>6 класс</p>
 					</a>
 					<a href="lession/7 класс/">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>7 класс</p>
 					</a>
 					<a href="lession/9 класс/">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>9 класс</p>
 					</a>
 					<a href="lession/10 класс/">
-						<img src="/img/file.png" alt="" class="main__teacher-icon">
+						<img src="img/file.png" alt="" class="main__teacher-icon">
 						<p>10 класс</p>
 					</a>
 				</div>
 			</div>
 		</section>
 		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="/js/slick.min.js"></script>
-		<script src="/js/script.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
