--- a/russOge.html
+++ b/russOge.html
@@ -23,7 +23,7 @@
 					<a href="index.html">Сайт учителя русского языка и литературы</a>
 				</div>
 				<div class="header__iner-subtitle">
-					Шатовой Анастасии Владиславовны
+					Старовойтовой Татьяны Юрьевны
 				</div>
 			</div>
 			<div class="header__iner-menu">
@@ -42,7 +42,7 @@
 
 					
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
-					<li class="header__iner-item"><a href="">Обратная связь</a></li>
+					
 				</ul>
 			</div>
 		</header>
