--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="main__iner-left1">
 						<h2 class="main__iner-text">
 							Уважаемые коллеги! Вы находитесь на персональном сайте учителя
-							русского языка и литературы Шатовой Анастасии Владиславовны <br>
+							русского языка и литературы Старовойтовой Татьяны Юрьевны <br>
 							Я рада приветствовать вас на этой платформе, которая создана для
 							учителей-словесников, учеников, интересующихся филологическими
 							науками, а также их родителей.
