--- a/index.html
+++ b/index.html
@@ -93,17 +93,13 @@
 						общеобразовательных школ. На данной странице можно ознакомиться с
 						рекомендациями и материалами для подготовки обучающихся к ГИА-23.
 					</h2>
-					<h2 class="main__iner-text"> <a href="">Методическая копилка</a> – в этой рубрике помещены
+					<h2 class="main__iner-text"> <a href="">Методическая копилка</a> – эта страница будет полезна не только для учителя, но и для ученика. Здесь вы найдете полезные сайты, материалы для зачетов, контрольных работ, рекомендации для выполнения домашних заданий.</h2>
+					<h2 class="main__iner-text"> <a href="">В помощь учителю</a> - в этой рубрике помещены
 						художественные и
 						филологические анализы стихотворений и прозаических текстов, работы по
 						истории русской и зарубежной литературы, истории русского языка,
 						риторике, истории мировых религий, литературе народов России, основам
-						специальной педагогики и психологии.</h2>
-					<h2 class="main__iner-text"> <a href="">В помощь учителю</a> - эта страница будет полезна не только для
-						учителя, но
-						и для ученика. Здесь Вы найдете планы различных творческих работ,
-						материалы для зачетов, контрольных работ, рекомендации для выполнения
-						домашних заданий.
+						специальной педагогики и психологии.
 					</h2>
 				</div>
 			</div>
