--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						общеобразовательных школ. На данной странице можно ознакомиться с
 						рекомендациями и материалами для подготовки обучающихся к ГИА-23.
 					</h2>
-					<h2 class="main__iner-text"> <a href="">Методическая копилка</a> – эта страница будет полезна не только для учителя, но и для ученика. Здесь вы найдете полезные сайты, материалы для зачетов, контрольных работ, рекомендации для выполнения домашних заданий.</h2>
+					<h2 class="main__iner-text"> <a href="">Полезные ссылки</a> – эта страница будет полезна не только для учителя, но и для ученика. Здесь вы найдете полезные сайты, материалы для зачетов, контрольных работ, рекомендации для выполнения домашних заданий.</h2>
 					<h2 class="main__iner-text"> <a href="">В помощь учителю</a> - в этой рубрике помещены
 						художественные и
 						филологические анализы стихотворений и прозаических текстов, работы по
