--- a/manual.html
+++ b/manual.html
@@ -39,19 +39,163 @@
 						</ul>
 					</li>
 
-					
+
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
-					
+					<li class="header__iner-item"><a href="manual.html">Полезные ссылки</a></li>
 				</ul>
 			</div>
 		</header>
 		<section class="main">
 			<div class="main__iner">
 				<div class="main__teacher-items">
-					<a href="">
-						<img src="img/file.png" alt="" class="main__teacher-icon">
-						<p></p>
-					</a>
+					<h2
+						style='font-size: 30px; margin-bottom: 10px;text-align: center;width: 100%; color:#a14a5a;font-weight: 700;'>
+						Интернет –
+						ресурсы для
+						учителей русского
+						языка и
+						литературы:
+					</h2>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-size: 22px; font-weight: bold;'
+						href="http://www.gramota.ru">http://www.gramota.ru -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>"Русский язык". Справочно-информационный портал. Основные задачи
+						портала: возрождение культуры речи, популяризация русского языка и поддержание его литературных норм.
+						Рассчитан на самый разный образовательный уровень и круг интересов. Размещены электронные словари:
+						"Орфографический словарь" под редакцией В.В.Лопатина, который постоянно пополняется; "Словарь трудностей
+						произношения и ударения" под ред. К.С.Горбачевича. В он-лайновом режиме бесплатно работает "Справочное
+						бюро". Также предлагается поучаствовать в "Дискуссионном клубе", порешать лингвистические задачи в разделе
+						"Конкурсы" или прочитать аналитические материалы в "Научном журнале". Здесь же собраны все "официальные
+						документы", относящиеся к русскому языку.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.pereplet.ru/obrazovanie/shkola/PAGE1-16.html">http://www.pereplet.ru/obrazovanie/shkola/PAGE1-16
+						-</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Изучение русской литературы в 10 классе. Сайт создан под
+						редакцией заслуженной учительницы России Натальи Беляевой. Методические рекомендации: распределение учебных
+						часов по темам программы 10 класса и тематическое планирование уроков литературы.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="">http://www.gramma.ru -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Культура письменной речи. Неофициальный проект, созданный группой
+						энтузиастов, в которую входят опытные преподаватели русского языка и литературы школ Санкт-Петербурга,
+						преподаватели кафедры русского языка Санкт-Петербургского государственного университета и других вузов. На
+						сайте представлены нормы русского языка, информация о стилях документов, рекомендации по сдаче экзаменов и
+						тестирование по русскому языку и литературе, ответы на вопросы.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="">http://ruslit.ioso.ru -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Кабинет русского языка и литературы. Сайт содержит антологию
+						русской поэзии первой четверти двадцатого века; тесты по русскому языку; поэтические загадки; страничку по
+						истории русской письменности; методические разработки и другие полезные материалы.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.ipmce.su/~lib/osn_prav.html"> http://www.ipmce.su/~lib/osn_prav -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Основные правила грамматики русского языка. Материал данного
+						сайта взят из "Орфографического словаря для школьников с грамматическим приложением." - М.: "Лист", 1998.
+					</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.ruthenia.ru/apr/?nocalendar=1">http://www.ruthenia.ru/apr/?nocalendar -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Архив Петербургской русистики. Проект информационной системы
+						Кафедра русского языка филологического факультета СПбГУ, поддержанный Российским гуманитарным научным
+						фондом, направлен на обеспечение информационных потребностей исследователей русского языка: преподавателей
+						кафедр русского языка, филологов других специализаций, учителей средней школы, отечественных и зарубежных
+						специалистов — лингвистов, литературоведов, историков, психологов, философов и т.д., вообще всех
+						интересующихся русским языком и его историей.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.repetitor.org/">http://www.repetitor.org/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Система сайтов «Репетитор». Информация для школьников,
+						абитуриентов и родителей: учебные программы по русскому языку и литературе; методика написания сочинений и
+						различные учебные материалы; полезная справочная информация.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.svetozar.ru/">http://www.svetozar.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>"Светозар". Сайт Открытой международной олимпиады школьников по
+						русскому языку. Олимпиада проводится Правительством Москвы. Принять участие в ней могут учащиеся 5-11
+						классов общеобразовательных школ России, стран СНГ, Балтии и любой другой стране мира. На сайте представлены
+						календарь олимпиады, анкета участника, задания заочных туров.</p>
+					<h2
+						style='font-size: 30px; margin-bottom: 10px;text-align: center;width: 100%; color:#a14a5a;font-weight: 700;'>
+						Интерактивные тесты и задания по
+						русскому:
+					</h2>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://moshkow.tomsk.ru/win/">http://moshkow.tomsk.ru/win/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Библиотека Максима Мошкова</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://profile-edu.ru/http://profile-edu.ru/">http://profile-edu.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'> профильное обучение в старшей школе</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://edu.tsu.ru/">http://edu.tsu.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Образовательный портал ТГУ</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.9151394.ru/">http://www.9151394.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Информационные и коммуникационные технологии в обучении</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.9151394.ru/projects/liter/uroksoch/index.htmlhttp://www.9151394.ru/projects/liter/uroksoch/index.html">http://www.9151394.ru/projects/liter/uroksoch/index.html
+						-</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Дистанционный семинар</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.9151394.ru/projects/liter/litkurs/index.html ">http://www.9151394.ru/projects/liter/litkurs/index.html
+						-</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Сочинение по литературе как модель исследования</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://repetitor.1c.ru/">http://repetitor.1c.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Серия учебных компьютерных программ '1С:Репетитор' по русскому
+						языку, Контрольно-диагностические системы серии 'Репетитор. Тесты' по пунктуации, орфографии и др.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.gramota.ru">http://www.gramota.ru -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Все о русском языке на страницах справочно-информационного
+						портала. Словари онлайн. Ответы на вопросы в справочном бюро. Официальные документы, связанные с языковой
+						политикой. Статьи, освещающие актуальные проблемы русистики и лингвистики.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://rifma.com.ru/">http://rifma.com.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Рифма. Теория и словари рифм. Словарь разновидностей рифмы. Всё
+						по стихосложению. Поэтический словарь в примерах. Сотни терминов, цитат и пояснений.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.gramma.ru/">http://www.gramma.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Пишем и говорим правильно: нормы современного русского языка.
+						Помощь школьникам и абитуриентам. Деловые бумаги - правила оформления. Консультации по русскому языку и
+						литературе, ответы на вопросы.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://vschool.km.ru/">http://vschool.km.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>виртуальная школа Кирилла и Мефодия (русский 5-6)</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://som.fio.ru/">http://som.fio.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>сетевое объединение методистов</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.ug.ru/">http://www.ug.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>«Учительская газета»</p>
+					<h2
+						style='font-size: 30px; margin-bottom: 10px;text-align: center;width: 100%; color:#a14a5a;font-weight: 700;'>
+						Другое:
+					</h2>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://rm.kirov.ru/ ">http://rm.kirov.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>"Русский медвежонок" - конкурс по языкознанию
+						Информация о общероссийском конкурсе школьников. Архив задач с 2000г. Списки победителей. Контакты
+						центрального и региональных оргкомитетов.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://www.mediaterra.ru/rhetoric/ ">http://www.mediaterra.ru/rhetoric/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Основы культуры речи и риторики
+						Практическое пособие. Статьи о технике письменной и устной речи, культура полемики и делового общения и пр.
+						Практические задания. Тесты.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://diction.chat.ru/ ">http://diction.chat.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Словарь тартуско-московской семиотической школы
+						Толкование терминов и специальной лексики современной семиотики.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://klyaksa.country.ru/index.shtml"> http://klyaksa.country.ru/index.shtml -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Грамматический конкурс “Золотая клякса”
+						Публикация вопросов и ответов на все темы русского языка: правописание, словоупотребление, стилистика и т.д.
+						Возможно и самому задать вопрос.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://rifma.com.ru ">http://rifma.com.ru -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Лаборатория рифмы
+						Информация о поэзии, стихосложении и лирике. Справочник по стихосложению. Словарь рифм русского языка.
+						Словарь поэтических терминов с примерами из классической поэзии. Тесты по стихосложению. Конкурсы с рифмами.
+						Сведения о соврменных поэтах. Собрание афоризмов. Каталог научных статей по тематике.</p>
+					<a style='margin: 0;margin-bottom: 10px;width: 100%;text-align: left; color: black; font-weight: bold;font-size: 22px;'
+						href="http://ruslit.ioso.ru/ ">http://ruslit.ioso.ru/ -</a>
+					<p style='margin-bottom: 10px; width: 100%;'>Кабинет русского языка и литературы
+						Авторы проекта представляют как собственный материал для работы на уроках русского языка и литературы, так и
+						перепечатки статей с других сайтов по вопросам общей филологии и преподавания.</p>
+
+
 				</div>
 			</div>
 		</section>
