--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					</li>
 
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
+					<li class="header__iner-item"><a href="manual.html">Полезные ссылки</a></li>
 					
 				</ul>
 			</div>
