--- a/literature.html
+++ b/literature.html
@@ -41,6 +41,7 @@
 
 					
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
+					<li class="header__iner-item"><a href="manual.html">Полезные ссылки</a></li>
 					
 				</ul>
 			</div>
