--- a/russLession.html
+++ b/russLession.html
@@ -42,6 +42,7 @@
 
 
 					<li class="header__iner-item"><a href="helpTeacher.html">В помощь учителю</a></li>
+					<li class="header__iner-item"><a href="manual.html">Полезные ссылки</a></li>
 					
 				</ul>
 			</div>
